--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test-mysql": "node scripts/test-mysql-connection.js",
+    "test-postgres": "node scripts/test-postgres-connection.js",
+    "setup-postgres": "node scripts/setup-postgres-database.js",
+    "migrate-to-postgres": "node scripts/migrate-mysql-to-postgres.js",
     "reset-db": "node scripts/reset-database.js",
     "reset-db-safe": "node scripts/reset-database-safe.js",
     "add-fecha-columns": "node scripts/add-fecha-columns.js",
@@ -15,6 +18,7 @@
     "add-nivel-column": "node scripts/add-nivel-column.js"
   },
   "dependencies": {
+    "@types/pg": "^8.15.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,6 +30,8 @@
     "mysql2": "^3.14.3",
     "node-cron": "^3.0.3",
     "pdfkit": "^0.14.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6"
   },
