--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -18,8 +19,8 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-table": "^7.8.0",
