--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ client/dist/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 server/.env
+server/.env.production
 client/.env
 
 # Database
